--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
 <script src="../bower_components/angular/angular.js"></script>
 
 <script src="../src/app.js"></script>
-<script src="../src/aocWrapper.js"></script>
+<script src="../src/aoc.js"></script>
 <script src="../src/controller.js"></script>
 
 
