--- a/exampleapp/index.html
+++ b/exampleapp/index.html
@@ -9,16 +9,15 @@
 
 <section>
     <strong>Progress Bar</strong>
+
     <div aoc component="progressbar" option-max="100" id="progress"></div>
-    <div aoc component="slider" id="slider" option-max="100" option-change="components.progressbar.progress.value($arg1.value);"></div>
+    <div aoc component="slider" id="slider" option-max="100"
+         option-change="components.progressbar.progress.value($arg1.value);"></div>
 
 </section>
 
 
 </body>
-<script src="../bower_components/jquery/jquery.js"></script>
-<script src="../bower_components/jquery-ui/ui/jquery-ui.js"></script>
-<script src="../bower_components/angular/angular.js"></script>
 
 <script src="js/app.js"></script>
 <script src="../src/aoc.js"></script>
