--- a/exampleapp/index.html
+++ b/exampleapp/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="../bower_components/jquery-ui/themes/ui-lightness/jquery-ui.css">
-
+    <link rel="stylesheet" type="text/css" href="vendor/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="vendor/bootstrap.css">
 </head>
 <body ng-app="app" ng-controller="app">
 
 <section>
     <strong>Progress Bar</strong>
 
-    <div aoc component="progressbar" option-max="100" id="progress"></div>
-    <div aoc component="slider" id="slider" option-max="100"
+    <div aoc component="progressbar" id="progress"></div>
+    <div aoc component="slider" id="slider"
          option-change="components.progressbar.progress.value($arg1.value);"></div>
 
 </section>
@@ -19,6 +19,10 @@
 
 </body>
 
+<script src="vendor/jquery.js"></script>
+<script src="vendor/jquery-ui.js"></script>
+<script src="vendor/bootstrap.js"></script>
+<script src="vendor/angular.js"></script>
 <script src="js/app.js"></script>
 <script src="../src/aoc.js"></script>
 <script src="js/controller.js"></script>
