Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,2 +1,56 @@
-AOC page commeon build
+<!DOCTYPE html>
+<html>
 
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Aoc : Angular optimized controls" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Aoc</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/andreio/aoc">View on GitHub</a>
+
+          <h1 id="project_title">Aoc</h1>
+          <h2 id="project_tagline">Angular optimized controls</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/andreio/aoc/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/andreio/aoc/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h1>
+<a name="aoc" class="anchor" href="#aoc"><span class="octicon octicon-link"></span></a>aoc</h1>
+
+<p>Angular optimized controls</p>
+
+<p>This handy little library offers a streamlined and natural way to integrate jQuery style plugins (out of the box) while allowing extensive configuration and customization.</p>
+
+<p>Documentation to come soon!!</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Aoc maintained by <a href="https://github.com/andreio">andreio</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
+</html>
