--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 
   <head>
     <meta charset='utf-8' />
@@ -35,6 +35,9 @@
 <a name="aoc" class="anchor" href="#aoc"><span class="octicon octicon-link"></span></a>aoc</h1>
 
 <p>Angular optimized controls</p>
+
+<i>Streamline your web controls!</i>
+
 
 <p>This handy little library offers a streamlined and natural way to integrate jQuery style plugins (out of the box) while allowing extensive configuration and customization.</p>
 
